--- a/index.html
+++ b/index.html
@@ -135,13 +135,32 @@
                 const res = await fetch('questions.json');
                 this.questions = await res.json();
                 this.totalQuestions = this.questions.length;
-                this.questions.forEach(q => q.locked = false); // add lock flag
+                this.questions.forEach(q => q.locked = false);
+
+                // 👇 Parse URL param
+                const params = new URLSearchParams(window.location.search);
+                const frameParam = parseInt(params.get('frame'));
+                if (frameParam && frameParam >= 1 && frameParam <= this.frames.length) {
+                    this.activeFrame = frameParam;
+                }
+
                 this.loadFrameContent();
             },
 
             async loadFrameContent() {
-                let res = await fetch(`frames/frame${this.activeFrame}.html`);
-                this.frameContent = await res.text();
+                try {
+                    let res = await fetch(`frames/frame${this.activeFrame}.html`);
+                    this.frameContent = await res.text();
+
+                    // 👇 Update URL without reloading
+                    const url = new URL(window.location);
+                    url.searchParams.set("frame", this.activeFrame);
+                    window.history.replaceState({}, "", url);
+
+                } catch (e) {
+                    console.error("Error loading frame:", e);
+                    this.frameContent = `<p class="text-red-600">Frame ${this.activeFrame} could not be loaded.</p>`;
+                }
             },
 
             getQuestions(frameId) {
@@ -151,26 +170,23 @@
             getOptionClass(q, opt) {
                 if (!q.locked) return 'hover:bg-gray-100 rounded px-2 py-1';
 
-                // ❌ Do not highlight correct answer
                 if (this.answers[q.id] === opt && this.answers[q.id] !== q.correct) {
                     return 'bg-red-100 text-red-800 font-semibold rounded px-2 py-1';
                 }
 
-                return 'opacity-70 px-2 py-1'; // faded for all other options
+                return 'opacity-70 px-2 py-1';
             },
 
             autoSubmit(q) {
                 if (q.locked) return;
                 if (!this.answers[q.id]) return;
 
-                // Check correctness
                 if (this.answers[q.id] === q.correct) {
                     this.correctCount++;
-                    q.locked = true; // lock if correct
                 } else {
                     this.wrongCount++;
-                    q.locked = true; // lock wrong as well
                 }
+                q.locked = true;
             },
 
             resetWrongAnswers(frameId) {
@@ -178,10 +194,9 @@
 
                 frameQs.forEach(q => {
                     if (q.locked && this.answers[q.id] !== q.correct) {
-                        // reset wrong answers only
                         this.answers[q.id] = null;
                         q.locked = false;
-                        this.wrongCount = Math.max(0, this.wrongCount - 1); // adjust wrong count
+                        this.wrongCount = Math.max(0, this.wrongCount - 1);
                     }
                 });
             },
@@ -204,5 +219,6 @@
         }
     }
 </script>
+
 </body>
 </html>
