--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- Top bar with Dark Mode Switch -->
 <header class="flex justify-between items-center max-w-4xl mx-auto mb-6">
-    <h1 class="text-lg sm:text-xl font-bold text-gray-900 dark:text-gray-100">🧘 Yoga Quiz</h1>
+    <h1 class="text-2xl sm:text-xl font-bold text-gray-900 dark:text-gray-100">🧘 Yoga Quiz</h1>
     <button @click="toggle()"
             class="p-2 rounded-full bg-gray-200 dark:bg-gray-700 hover:scale-110 transition"
             x-tooltip="Toggle Dark Mode">
@@ -36,9 +36,10 @@
 
         <!-- Moon Icon (Dark Mode) -->
         <svg x-show="isDark" xmlns="http://www.w3.org/2000/svg"
-             class="h-6 w-6 text-gray-200" fill="currentColor" viewBox="0 0 24 24">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M21.752 15.002a9.72 9.72 0 01-6.79 6.748 9.75 9.75 0 01-9.36-16.916A9.72 9.72 0 0112 2.25c5.385 0 9.75 4.365 9.75 9.75 0 1.049-.166 2.058-.498 3.002z"/>
+             class="h-6 w-6 text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M21 12.79A9 9 0 1111.21 3
+           7 7 0 0021 12.79z" />
         </svg>
     </button>
 </header>
@@ -68,7 +69,7 @@
 
             <!-- STEP 2: Frame Questions -->
             <div x-show="phase === 'questions'">
-                <h3 class="text-base sm:text-lg font-semibold mb-4 text-gray-900 dark:text-gray-100">
+                <h3 class="text-xl sm:text-lg font-semibold mb-4 text-center text-gray-900 dark:text-gray-100">
                     Questions for Frame <span x-text="frame.id"></span>
                 </h3>
 
