On select submit

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <!-- STEP 1: Frame Content -->
             <div x-show="phase === 'content'">
-                <h2 class="text-lg sm:text-xl font-bold mb-4 text-gray-900 dark:text-gray-100">
+                <h2 class="text-lg sm:text-xl font-bold mb-4 text-gray-900 dark:text-gray-100 text-center">
                     📖 Frame <span x-text="frame.id"></span>
                 </h2>
 
