--- a/quiz.html
+++ b/quiz.html
@@ -133,5 +133,23 @@
         </p>
     </div>
 </div>
+
+<!-- Footer -->
+<footer class="mt-10 text-center text-gray-600 dark:text-gray-400 text-sm">
+    <p class="flex items-center justify-center space-x-2">
+        <span>Developed with</span>
+        <svg class="w-5 h-5 text-red-600 animate-pulse" xmlns="http://www.w3.org/2000/svg"
+             viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd"
+                  d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4
+                     4 0 115.656 5.656L10 18.657l-6.828-6.829a4
+                     4 0 010-5.656z" clip-rule="evenodd" />
+        </svg>
+        <span>by <a href="https://vijaygoswami.com" target="_blank"
+                    class="underline hover:text-blue-600 dark:hover:text-blue-400">Vijay Goswami</a> &amp;
+        <a href="https://attrixtech.com" target="_blank"
+           class="underline hover:text-blue-600 dark:hover:text-blue-400">Attrix Technologies</a></span>
+    </p>
+</footer>
 </body>
 </html>
