--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Yoga Quiz Frames</title>
+    <title>Yoga Quiz - Introduction</title>
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -19,15 +19,14 @@
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 
-<body class="bg-gray-100 dark:bg-gray-900 p-4 sm:p-6 transition-colors duration-300">
+<body class="bg-gray-100 dark:bg-gray-900 p-6 sm:p-10 transition-colors duration-300">
 
 <!-- Top bar with Dark Mode Switch -->
-<header class="flex justify-between items-center max-w-4xl mx-auto mb-6">
-    <h1 class="text-2xl sm:text-xl font-bold text-gray-900 dark:text-gray-100">🧘 Yoga Quiz</h1>
+<header class="flex justify-between items-center max-w-5xl mx-auto mb-8">
+    <h1 class="text-2xl sm:text-3xl font-bold text-gray-900 dark:text-gray-100">🧘 Yoga Quiz System</h1>
     <button @click="toggle()"
             class="p-2 rounded-full bg-gray-200 dark:bg-gray-700 hover:scale-110 transition"
             x-tooltip="Toggle Dark Mode">
-        <!-- Sun Icon -->
         <!-- Sun Icon (Light Mode) -->
         <svg x-show="!isDark" xmlns="http://www.w3.org/2000/svg"
              class="h-6 w-6 text-yellow-500" fill="currentColor" viewBox="0 0 24 24">
@@ -44,9 +43,54 @@
     </button>
 </header>
 
-<div x-data="quizApp()" x-init="loadQuestions()"
-     class="max-w-4xl mx-auto space-y-6">
-    hi
-</div>
+<!-- Introduction Section -->
+<section class="max-w-5xl mx-auto bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden transition-colors duration-300">
+    <div class="flex flex-col md:flex-row items-center">
+        <!-- Image -->
+        <div class="w-full md:w-1/3">
+            <img src="YOUR_IMAGE_PATH_HERE" alt="Asst. Prof. Alok Pathak"
+                 class="w-full h-full object-cover md:rounded-l-2xl">
+        </div>
+        <!-- Text Content -->
+        <div class="w-full md:w-2/3 p-6 sm:p-10">
+            <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 dark:text-gray-100 mb-4">
+                Yoga Quiz System
+            </h2>
+            <p class="text-lg text-gray-700 dark:text-gray-300 mb-3">
+                This Yoga Quiz System is an innovative educational tool developed with the vision of blending traditional knowledge with modern digital learning.
+            </p>
+            <p class="text-md text-gray-600 dark:text-gray-400 mb-3">
+                <span class="font-semibold">Developed by:</span> <br/>
+                Asst. Prof. <strong>Alok Pathak</strong><br/>
+                (M. Sc., M. Ed., M.Phil., NET [Education])<br/>
+                Department of Teacher Education (B. Ed.), <br/>
+                A. K. Shikohabad (Firozabad)
+            </p>
+            <p class="text-md text-gray-600 dark:text-gray-400">
+                The purpose of this system is to make learning <strong>interactive, engaging, and self-assessing</strong>, especially in the field of Yoga education. With thoughtfully curated frames and questions, it encourages students to test, revise, and strengthen their knowledge in a professional, yet user-friendly environment.
+            </p>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="mt-10 text-center text-gray-600 dark:text-gray-400 text-sm">
+    <p>© 2025 Yoga Quiz System | Designed for Educational Excellence</p>
+</footer>
+
+<script>
+    function darkMode() {
+        return {
+            isDark: JSON.parse(localStorage.getItem('isDark')) || false,
+            init() {
+                this.isDark = JSON.parse(localStorage.getItem('isDark')) || false;
+            },
+            toggle() {
+                this.isDark = !this.isDark;
+                localStorage.setItem('isDark', JSON.stringify(this.isDark));
+            }
+        }
+    }
+</script>
 </body>
 </html>
