--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="flex flex-col md:flex-row items-center">
         <!-- Image -->
         <div class="w-full md:w-1/3">
-            <img src="YOUR_IMAGE_PATH_HERE" alt="Asst. Prof. Alok Pathak"
+            <img src="images/alok-pathak.jpg" alt="Asst. Prof. Alok Pathak"
                  class="w-full h-full object-cover md:rounded-l-2xl">
         </div>
         <!-- Text Content -->
@@ -72,6 +72,14 @@
         </div>
     </div>
 </section>
+
+<!-- Start Quiz Button -->
+<div class="max-w-5xl mx-auto mt-8 flex justify-center">
+    <a href="/quiz.html"
+       class="w-full sm:w-auto px-10 py-4 text-lg font-bold text-white bg-gradient-to-r from-yellow-400 to-orange-500 rounded-xl shadow-lg hover:scale-105 hover:from-yellow-500 hover:to-orange-600 transition transform text-center">
+        🚀 Start Quiz
+    </a>
+</div>
 
 <!-- Footer -->
 <footer class="mt-10 text-center text-gray-600 dark:text-gray-400 text-sm">
