--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <section class="max-w-5xl mx-auto bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden transition-colors duration-300">
     <div class="flex flex-col md:flex-row items-center">
         <!-- Image -->
-        <div class="w-full md:w-1/3">
+        <div class="w-full md:w-1/3 px-5">
             <img src="images/alok-pathak.jpg" alt="Asst. Prof. Alok Pathak"
                  class="w-full h-full object-cover md:rounded-l-2xl">
         </div>
