On select submit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Yoga Quiz - Introduction</title>
+    <title>Yoga Learning - Introduction</title>
 
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -23,7 +23,7 @@
 
 <!-- Top bar with Dark Mode Switch -->
 <header class="flex justify-between items-center max-w-5xl mx-auto mb-8">
-    <h1 class="text-2xl sm:text-3xl font-bold text-gray-900 dark:text-gray-100">🧘 Yoga Quiz System</h1>
+    <h1 class="text-2xl sm:text-3xl font-bold text-gray-900 dark:text-gray-100">🧘 Yoga Learning System</h1>
     <button @click="toggle()"
             class="p-2 rounded-full bg-gray-200 dark:bg-gray-700 hover:scale-110 transition"
             x-tooltip="Toggle Dark Mode">
@@ -54,17 +54,15 @@
         <!-- Text Content -->
         <div class="w-full md:w-2/3 p-6 sm:p-10">
             <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 dark:text-gray-100 mb-4">
-                Yoga Quiz System
+                Yoga Learning System
             </h2>
             <p class="text-lg text-gray-700 dark:text-gray-300 mb-3">
-                This Yoga Quiz System is an innovative educational tool developed with the vision of blending traditional knowledge with modern digital learning.
+                This is Yoga Education based innovative educational tool developed with the vision of blending traditional knowledge with modern digital learning.
             </p>
             <p class="text-md text-gray-600 dark:text-gray-400 mb-3">
                 <span class="font-semibold">Developed by:</span> <br/>
                 Asst. Prof. <strong>Alok Pathak</strong><br/>
                 (M. Sc., M. Ed., M.Phil., NET [Education])<br/>
-                Department of Teacher Education (B. Ed.), <br/>
-                A. K. Shikohabad (Firozabad)
             </p>
             <p class="text-md text-gray-600 dark:text-gray-400">
                 The purpose of this system is to make learning <strong>interactive, engaging, and self-assessing</strong>, especially in the field of Yoga education. With thoughtfully curated frames and questions, it encourages students to test, revise, and strengthen their knowledge in a professional, yet user-friendly environment.
@@ -77,13 +75,13 @@
 <div class="max-w-5xl mx-auto mt-8 flex justify-center">
     <a href="/quiz.html"
        class="w-full sm:w-auto px-10 py-4 text-lg font-bold text-white bg-gradient-to-r from-yellow-400 to-orange-500 rounded-xl shadow-lg hover:scale-105 hover:from-yellow-500 hover:to-orange-600 transition transform text-center">
-        🚀 Start Quiz
+        🚀 Start
     </a>
 </div>
 
 <!-- Footer -->
 <footer class="mt-10 text-center text-gray-600 dark:text-gray-400 text-sm">
-    <p>© 2025 Yoga Quiz System | Designed for Educational Excellence</p>
+    <p>© 2025 Yoga Learning System | Designed for Educational Excellence</p>
 </footer>
 
 <script>
