--- a/frames/frame1.html
+++ b/frames/frame1.html
@@ -8,12 +8,12 @@
     <h2 class="text-2xl font-bold mb-4">Frame1: योग का प्रथम अंग 'यम'</h2>
     <p class="mb-4">
         यम 'योग के आठ अंगों' में से पहला अंग हैं, जिसकी उत्पत्ति प्राचीन भारतीय
-        दार्शनिक ग्रंथ 'पतंजलि के योग सूत्र' से हुई है। प्रत्येक अंग योग अभ्यास के एक विशेष
+        दार्शनिक ग्रंथ पतंजलि के 'योग सूत्र' से हुई है। प्रत्येक अंग योग अभ्यास के एक विशेष
         पहलू का वर्णन करता है, जो सभी मुक्ति और ज्ञान की ओर ले जाते हैं।
     </p>
     <p class="mb-4">
         योग-दर्शन के पातंजलि सूत्र 30 में यम के सम्बन्ध में बताया गया है-<br />
-        अहिंसा सत्‍यास्तेय ब्रह्मचर्यापरिग्रहा यमाः। अर्थात् अहिंसा, सत्य, अस्तेय,
+        <b>अहिंसा सत्‍यास्तेय ब्रह्मचर्यापरिग्रहा यमाः।</b> अर्थात् अहिंसा, सत्य, अस्तेय,
         ब्रह्मचर्य और अपरिग्रह यह पंच यम हैं। इनकी उपर्युक्त पाँच शब्दों से परिभाषा की गई है।
         इस पंचयम समूह का नाम यम रखा गया है। यम शब्द से तात्पर्य पंच यमों की भावना से भी है।
         क्रमशः प्रत्येक के बारे में कुछ विवेचना की जाती है।
@@ -21,7 +21,7 @@
 
     <h3 class="text-xl font-semibold mb-2">1. अहिंसा</h3>
     <p class="mb-4">
-        अहिंसा का अर्थ है किसी भी प्राणी को न सताना। दूसरों को शारीरिक रूप से, मानसिक रूप से
+        अहिंसा का अर्थ है 'किसी भी प्राणी को न सताना'। दूसरों को शारीरिक रूप से, मानसिक रूप से
         या प्रकृति को भौतिक रूप से नुक़सान न पहुँचाना; दूसरों या खुद के बारे में नकारात्मक विचार
         न रखना; और यह सुनिश्चित करना कि हम जो करते हैं और जिस तरह से करते हैं वह सद्भावनापूर्ण हो,
         न कि नुकसान पहुँचाने वाला हो।
