--- a/frames/frame3.html
+++ b/frames/frame3.html
@@ -1,15 +1,15 @@
 <div class="max-w-3xl mx-auto">
 
-    <h2 class="text-2xl font-bold mb-4">Frame 3: अष्टांग योग के नियम (Niyama in Ashtanga Yoga)</h2>
+    <h2 class="text-2xl font-bold mb-4">Frame 3: अष्टांग योग के नियम (आंतरिक अनुशासन)</h2>
 
     <p class="mb-4">
         संसार में योग की परंपरा काफ़ी पुरानी है। वेद-पुराणों के अनुसार ऋषियों और तपस्वियों द्वारा ही योग
-        की विधि को अपनाया गया है। योग के प्रसिद्ध ग्रंथ पतंजलयोगदर्शन (Patanjali Yoga Darshan) में इसके
+        की विधि को अपनाया गया है। योग के प्रसिद्ध ग्रंथ पतंजलयोगदर्शन में इसके
         बारे में विस्तृत रूप से बताया गया है।
     </p>
 
     <p class="mb-4">
-        इसके अनुसार <strong>योगश्चित्तवृत्तिनिरोधः</strong> यानी मन की वृत्तियों पर नियंत्रण करना ही योग
+        इसके अनुसार <strong>'योगश्चित्तवृत्तिनिरोधः'</strong> यानी मन की वृत्तियों पर नियंत्रण करना ही योग
         है। श्री कृष्ण द्वारा गीता में भी एक स्थान पर कहा गया है कि, "<strong>योग: कर्मषु कौशलम्</strong>"
         यानी कर्मों में कुशलता ही योग है। अष्टांग योग के आठ अंगों में दूसरा अंग है <strong>नियम</strong>
         (Niyama)।
@@ -23,11 +23,11 @@
     </p>
 
     <p class="mb-4">
-        <strong>नियम के पांच प्रकार</strong> हैं - शौच, संतोष, तप, स्वाध्याय और ईश्वर प्रणीधान। इन नियमों
+        <strong>अष्टांग योग के अनुसार नियम पांच</strong> हैं - शौच, संतोष, तप, स्वाध्याय और ईश्वर प्रणीधान। इन नियमों
         के बारे में विस्तार से जानते हैं:
     </p>
 
-    <h3 class="text-xl font-semibold mb-2">1. शौच (Saucha)</h3>
+    <h3 class="text-xl font-semibold mb-2">1. शौच</h3>
     <p class="mb-4">
         यहाँ शौच का मतलब मन और शरीर की पवित्रता से होता है। यानी सिर्फ शरीर को साफ़ रखना ही शौच नहीं है,
         बल्कि मन से गलत भावना को निकालना भी शौच है। अष्टांग योग के शौच नियम में मन की अंतःशुद्धि, राग,
