--- a/frames/frame5.html
+++ b/frames/frame5.html
@@ -14,7 +14,7 @@
             <h2 class="text-2xl font-bold mb-4">Frame 5: अष्टांग योग का तीसरा अंग – आसन</h2>
 
             <p class="mb-4">
-                आसन का अर्थ है एक विशिष्ट मुद्रा में बैठना, जो आरामदायक हो और जिसे लंबे समय तक स्थिर रखा जा सके।
+                आसन का अर्थ है 'एक विशिष्ट मुद्रा में बैठना, जो आरामदायक हो और जिसे लंबे समय तक स्थिर रखा जा सके'।
                 आसन शारीरिक और मानसिक दोनों स्तरों पर स्थायित्व और आराम प्रदान करते हैं।
             </p>
 
