--- a/frames/frame6.html
+++ b/frames/frame6.html
@@ -7,11 +7,17 @@
                 alt="अष्टांग योग - वृक्षासन और वज्रासन"
                 class="w-full h-auto rounded-lg shadow"
             />
+
+            <img
+                    src="images/frame6-2.jpg"
+                    alt="अष्टांग योग - वृक्षासन और वज्रासन"
+                    class="w-full h-auto rounded-lg shadow"
+            />
         </div>
 
         <!-- Content -->
         <div class="md:w-1/2">
-            <h2 class="text-2xl font-bold mb-4">Frame 6: वृक्षासन और वज्रासन</h2>
+            <h2 class="text-2xl font-bold mb-4">Frame 6:</h2>
 
             <!-- वृक्षासन -->
             <h3 class="text-xl font-semibold mb-2">वृक्षासन</h3>
@@ -36,7 +42,7 @@
             </ul>
 
             <!-- वज्रासन -->
-            <h3 class="text-xl font-semibold mb-2">वज्रासन</h3>
+            <h3 class="text-xl font-semibold mb-2 mt-8">वज्रासन</h3>
             <p class="mb-2">
                 यह एकमात्र ऐसा आसन है जिसका अभ्यास भोजन लेने के तुरंत बाद किया जा सकता है।
             </p>
