--- a/frames/frame6.html
+++ b/frames/frame6.html
@@ -11,7 +11,7 @@
             <img
                     src="images/frame6-2.jpg"
                     alt="अष्टांग योग - वृक्षासन और वज्रासन"
-                    class="w-full h-auto rounded-lg shadow"
+                    class="w-full h-auto rounded-lg shadow mt-4"
             />
         </div>
 
@@ -42,7 +42,7 @@
             </ul>
 
             <!-- वज्रासन -->
-            <h3 class="text-xl font-semibold mb-2 mt-8">वज्रासन</h3>
+            <h3 class="text-xl font-semibold mb-2 mt-12">वज्रासन</h3>
             <p class="mb-2">
                 यह एकमात्र ऐसा आसन है जिसका अभ्यास भोजन लेने के तुरंत बाद किया जा सकता है।
             </p>
